--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.WizardScoreBoard"
         tools:targetApi="31">
         <activity
+            android:name=".six_sheet"
+            android:exported="false"
+            android:theme="@style/Theme.WizardScoreBoard" />
+        <activity
+            android:name=".six_players"
+            android:exported="false"
+            android:label="@string/title_activity_six_players"
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.WizardScoreBoard.NoActionBar"
+            tools:targetApi="24" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
